--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robótica</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
-    Criamos este site para mostrar os nossos trabalhos de robotica
+   <header>
+    <div class="caixa">
+       <p>robotics at school</p>
+   </header>
+
+   <main>
+       <section>
+        <img src="img.robot.jfif" class="img.robo">
+           <div class="entrada">
+            <p  class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p>
+       </section>
+   </main>
     
 </body>
 </html>
