--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <section>
         <img src="img.robot.jfif" class="img.robo">
            <div class="entrada">
-            <p  class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p>
+            <p  class ="texto"> A D-BOOTS foi criada em 2023 por alunos do colegio Unidade Polo com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis, aqui vocês podem encontrar o desenvolvimento dos nossos projetos.</p>
        </section>
    </main>
     
