--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
    </header>
 
    <main>
-       <section>
-        <img src="img.robot.jfif" class="img.robo">
-           <div class="entrada">
-            <p  class ="texto"> A D-BOOTS foi criada em 2023 por alunos do colegio Unidade Polo com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis, aqui vocês podem encontrar o desenvolvimento dos nossos projetos.</p>
-       </section>
+       <section >
+        <p class="nosso-nome"> D-Boots</p>
+        <p class="home">Home</p>
+        <div class="entrada" >
+            <img src="logo.png" class="logo">
+            <img src="robo.jpg" class="img-robo">
+            <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p>
+        </div>
+    </section>
    </main>
     
 </body>
