--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p class="home">Home</p>
         <div class="entrada" >
             <img src="logo.png" class="logo">
-            <img src="robo.jpg" class="img-robo">
+            <img src="robo4.png" class="img-robo">
             <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p>
         </div>
     </section>
