--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
 
 </head>
@@ -22,9 +23,13 @@
         <p class="nosso-nome"> D-Boots</p>
         <p class="home">Home</p>
         <div class="entrada" >
-            <img src="logo.png" class="logo">
+            <a href="index.html">
+            <img src="logo.png" class="logo"></a>
             <img src="robo4.png" class="img-robo">
-            <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p>
+                <li><a href="nos-style.css" class="nos">01</a></li>
+                <li><a href="trabalhos-style.css" class="trabalhos">02</a></li>
+                <li><a href="loc-style.css" class="loc">03</a></li>              
+           <!-- <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p> -->
         </div>
     </section>
    </main>
