--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
    <header>
-    <div class="caixa">
-       <p>robotics at school</p>
+        <!-- <div class="caixa">
+            <p>robotics at school</p> -->
+        </div>
    </header>
 
    <main>
        <section >
-        <p class="nosso-nome"> D-Boots</p>
-        <p class="home">Home</p>
+            <p class="nosso-nome"> D-Boots</p>
+            <!-- <p class="home">Home</p> -->
         <div class="entrada" >
             <a href="index.html">
             <img src="logo.png" class="logo"></a>
@@ -29,9 +32,9 @@
                 <li><a href="nos-style.css" class="sobre1">01</a></li>
                 <li><a href="trabalhos-style.css" class="trabalhos2">02</a></li>
                 <li><a href="loc-style.css" class="loc3">03</a></li> 
-                <p class="sobre">SOBRE</p>     
-                <p class="trabalhos" Trabalhos></p>   
-                <p class="loc" Localização></p>  
+                <p class="sobre">S O B R E</p>     
+                <p class="trabalhos">T R A B A L H O S</p>   
+                <p class="loc">L O C A L I Z A Ç Ã O</p>  
            <!-- <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p> -->
         </div>
     </section>
