--- a/index.html
+++ b/index.html
@@ -20,21 +20,20 @@
             <p>robotics at school</p> -->
         </div>
    </header>
-
    <main>
        <section >
-            <p class="nosso-nome"> D-Boots</p>
+        <p class="nosso-nome"> D-Boots</p> 
             <!-- <p class="home">Home</p> -->
         <div class="entrada" >
-            <a href="index.html">
+            <a href="abas.html">
             <img src="logo.png" class="logo"></a>
-            <img src="robo4.png" class="img-robo">
-                <li><a href="nos-style.css" class="sobre1">01</a></li>
-                <li><a href="trabalhos-style.css" class="trabalhos2">02</a></li>
-                <li><a href="loc-style.css" class="loc3">03</a></li> 
+            <img src="robo4.png" class="img-robo"> 
+                <li><a href="sobre.html" class="sobre1">01</a></li>
+                <li><a href="trabalhos.html" class="trabalhos2">02</a></li>
+                <li><a href="loc.html" class="loc3">03</a></li> 
                 <p class="sobre">S O B R E</p>     
                 <p class="trabalhos">T R A B A L H O S</p>   
-                <p class="loc">L O C A L I Z A Ç Ã O</p>  
+                <p class="loc">L O C A L I Z A Ç Ã O</p> 
            <!-- <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p> -->
         </div>
     </section>
