--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- <p class="home">Home</p> -->
         <div class="entrada" >
             <a href="abas.html">
-            <img src="logo.png" class="logo"></a>
+            <img src="foto.jpg" class="logo"></a>
             <img src="robo4.png" class="img-robo"> 
                 <li><a href="sobre.html" class="sobre1">01</a></li>
                 <li><a href="trabalhos.html" class="trabalhos2">02</a></li>
