--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <!-- <p class="home">Home</p> -->
         <div class="entrada" >
             <a href="abas.html">
-            <img src="foto.jpg" class="logo"></a>
-            <img src="robo4.png" class="img-robo"> 
+            <img src="logo.jpg" class="logo"></a>
+            <img src="foto.jpg" class="img-robo"> 
                 <li><a href="sobre.html" class="sobre1">01</a></li>
                 <li><a href="trabalhos.html" class="trabalhos2">02</a></li>
                 <li><a href="loc.html" class="loc3">03</a></li> 
