--- a/trabalhos.html
+++ b/trabalhos.html
@@ -9,6 +9,7 @@
 
    <style>
     div.bloco {
+        background-image: url(imagens/wallpaper002.png);
         height: 200px;
         border: 1px solid black;
         border-radius: 20px;
@@ -42,6 +43,10 @@
         <div class="bloco">
             
 
-        </div>        
+        </div> 
+        <div class="bloco"> 
+
+
+        </div>      
 </body>
 </html>
