--- a/trabalhos.html
+++ b/trabalhos.html
@@ -14,18 +14,19 @@
         border: 1px solid black;
         border-radius: 20px;
         margin: 10px;
-
-
     }
-     
-
-
-   </style>
-    }
+       	.logo {
+		position: relative;
+		left: 1120px;
+		top: -180px;
+		width: 100px; 
+		height: 100px; 
+		
+	}
+}
+    </style>
     
-   
-
-</head>
+    </head>
 <body>
     <main>
         <section >
