--- a/trabalhos.html
+++ b/trabalhos.html
@@ -5,14 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalhos</title>
-<link rel="stylesheet" href="trabalhos-style.css">
+
+    <link rel="stylesheet" href="trabalhos-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
     
     </head>
 <body>
+
+    <header></header>
+
     <main>
         <section >
-         <p class="nosso-nome"> D-Boots</p>
-         <img src="logo.png" class="logo"></a>
+        <p class="nosso-nome"> D-Boots</p> 
+        <div class="entrada" >
+            <a href="abas.html">
+            <img src="logo.png" class="logo"></a>
 
         <div class="bloco">
             
