--- a/abas.html
+++ b/abas.html
@@ -16,11 +16,13 @@
     <header>
         <p class="nosso-nome"> D-Boots</p>
     </header>
+    <section>
         <a href="index.html" class="x">x</a>
         <img src="robo1.png" class="img-robo">
-        <li><a href="nos-style.css" class="sobre1">Sobre</a></li>
-        <li><a href="trabalhos-style.css" class="trabalhos2">Trabalhos</a></li>
-        <li><a href="loc-style.css" class="loc3">Localização</a></li>
-    
+        <li><a href="nos.html" class="nos1">Nós</a></li>
+        <li><a href="trabalhos.html" class="trabalhos2">Trabalhos</a></li>
+        <li><a href="loc.html" class="loc3">Localização</a></li>
+    </section>
+
 </body>
 </html>
