--- a/abas.html
+++ b/abas.html
@@ -17,11 +17,13 @@
         <p class="nosso-nome"> D-Boots</p>
     </header>
     <section>
-        <a href="index.html" class="x">x</a>
-        <img src="robo1.png" class="img-robo">
-        <li><a href="nos.html" class="nos1">Nós</a></li>
-        <li><a href="trabalhos.html" class="trabalhos2">Trabalhos</a></li>
-        <li><a href="loc.html" class="loc3">Localização</a></li>
+        <div>
+            <img src="robo1.png" class="img-robo">
+            <a href="index.html" class="x">x</a>
+            <li><a href="nos.html" class="nos1">Nós</a></li>
+            <li><a href="trabalhos.html" class="trabalhos2">Trabalhos</a></li>
+            <li><a href="loc.html" class="loc3">Localização</a></li>
+        </div>
     </section>
 
 </body>
