--- a/loc.html
+++ b/loc.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Localização</title>
     <link rel="stylesheet" href="loc-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <main>
          <p class="nosso-nome"> D-Boots</p> 
-</main>
-                       <section class="mapa">
-    <h3 class="titulo-principal">Nosso estabelecimento</h3>
-    <p>Nosso estabelecimento está localizado no coração da cidade.</p>
-<div class="mapa-conteudo">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4483278365396!2d-46.63466568562861!3d-23.588249068469487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum!5e0!3m2!1spt-BR!2sbr!4v1568814489656!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-</div>
-</section>  
+         <a href="abas.html">
+            <img src="logo.png" class="logo"></a>
+
+            <section class="mapa">
+                <p class="texto-fale">Fale conosco</p>
+                <p class="texto2">Av. Eng. Francisco Beltrão, 1005 - Centro, Ibiporã - PR, 86200-000</p> 
+                <p class="texto3">Colégio Unidade Polo</p>
+                <p class="texto4">Instagram: d_boots_</p>
+
+                <div class="mapa-conteudo">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58503.19744076339!2d-46.69824986874998!3d-23.5881948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1653262588916!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </section>
+    </main>
 </body>
 </html>
