--- a/nos.html
+++ b/nos.html
@@ -1,5 +1,33 @@
-<section class=”estudantes”>
-    <h2 class=”estudante-titulo”>Quem são nossos estudantes</h2>
-    <img class=”estudante-imagem” src=”Marcelo.jpeg” alt=”foto do marcelo”>
-    <h3 class=”estudante-nome”>Marcelo</h3>
-</section>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trabalhos</title>
+
+    <link rel="stylesheet" href="trabalhos-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
+    
+    </head>
+<body>
+
+    <header></header>
+
+    <main>
+        <section >
+        <p class="nosso-nome"> D-Boots</p> 
+        <div class="entrada" >
+            <a href="abas.html">
+            <img src="logo.png" class="logo"></a>
+        </section>
+
+        <section class=”estudantes”>
+            <h2 class=”estudante-titulo”>Quem são nossos estudantes</h2>
+            <img class=”estudante-imagem” src=”Marcelo.jpeg” alt=”foto do marcelo”>
+            <h3 class=”estudante-nome”>Marcelo</h3>
+        </section>
+     
+</body>
+</html>
+
