--- a/nos.html
+++ b/nos.html
@@ -4,28 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabalhos</title>
+    <title>Nós</title>
 
-    <link rel="stylesheet" href="trabalhos-style.css">
+    <link rel="stylesheet" href="nos-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
     
     </head>
 <body>
 
-    <header></header>
-
-    <main>
+    <header>
         <section >
         <p class="nosso-nome"> D-Boots</p> 
         <div class="entrada" >
             <a href="abas.html">
             <img src="logo.png" class="logo"></a>
         </section>
+    </header>
 
-        <section class=”estudantes”>
-            <h2 class=”estudante-titulo”>Quem são nossos estudantes</h2>
-            <img class=”estudante-imagem” src=”Marcelo.jpeg” alt=”foto do marcelo”>
-            <h3 class=”estudante-nome”>Marcelo</h3>
+        <section class="estudantes">
+            <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
+            <div class="estudante-todos">
+                <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="bella.png" alt="foto da Bella">
+                <h3 class="estudante-nome">Bella</h3>
+                <a href="https://github.com/Bellitah"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
+                <a href="https://www.instagram.com/lopes_belh/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="isa.png" alt="foto da Bella">
+                <h3 class="estudante-nome">Isadora</h3>
+                <a href="https://github.com/brandaoisadora"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
+                <a href="https://www.instagram.com/isa_brandaooo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="leo.png" alt="foto da Bella">
+                <h3 class="estudante-nome">Leonardo</h3>
+                <a href="https://github.com/TROXAAA"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
+                <a href="https://www.instagram.com/xzx_l.e.o_xzx/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="marya.png" alt="foto da Bella">
+                <h3 class="estudante-nome">Marya Vitoria</h3>
+                <a href="https://github.com/mavi190275"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
+                <a href="https://www.instagram.com/marya_vitoria07/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="gab.png" alt="foto da Bella">
+                <h3 class="estudante-nome">Gabriel</h3>
+                <a href="https://github.com/alves09"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
+                <a href="https://www.instagram.com/gabriel_costa_05/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="ana.png" alt="foto da Bella">
+                <h3 class="estudante-nome">Ana Luiza</h3>
+                <a href="https://github.com/annalumiau"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
+                <a href="https://www.instagram.com/lopes_belh/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            </div>
+            </div>
         </section>
      
 </body>
