--- a/sobre.html
+++ b/sobre.html
@@ -7,12 +7,21 @@
     <title>Sobre</title>
 
     <link rel="stylesheet" href="sobre-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <header></header>
+    <header>
     <section >
         <p class="nosso-nome"> D-Boots</p> 
+        <div class="entrada" >
+            <a href="abas.html">
+            <img src="logo.png" class="logo"></a>
+        </section>
+    </header>
+
+    <section>
+        <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p>
     </section>
 </body>
 </html>
