--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="entrada" >
             <a href="abas.html">
             <img src="logo.png" class="logo"></a>
-            <img src="cruzamento.jpg" class="img-robo"> 
+            <img src="maorobo.jpg" class="img-robo"> 
                 <li><a href="sobre.html" class="sobre1">01</a></li>
                 <li><a href="trabalhos.html" class="trabalhos2">02</a></li>
                 <li><a href="loc.html" class="loc3">03</a></li> 
