--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,7 @@
     </header>
 
     <section>
-        <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p>
+        <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, postarmos projetos desenvolvidos durante as aulas de robotica. Fundada por alunos do colegio estadual unidade polo. </p>
     </section>
 </body>
 </html>
