--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Website icon" type="png"
-          href="logo.png">
+          href="logo2.png">
     <title>Robótica</title>
 
     <link rel="stylesheet" href="style.css">
@@ -29,7 +29,7 @@
         <div class="entrada" >
             <a href="abas.html">
             <img src="logo.png" class="logo"></a>
-            <img src="maorobo.jpg" class="img-robo"> 
+            <img src="robo4.png" class="img-robo"> 
                 <li><a href="sobre.html" class="sobre1">01</a></li>
                 <li><a href="trabalhos.html" class="trabalhos2">02</a></li>
                 <li><a href="loc.html" class="loc3">03</a></li> 
@@ -40,6 +40,9 @@
         </div>
     </section>
    </main>
-    
+
+   <iframe src="https://sprig.figma.com" aria-hidden="true" tabindex="-1" height="0" width="0" style="position: fixed; bottom: 0px; right: 0px; z-index: 2147483647;">
+</iframe>
+
 </body>
 </html>
