--- a/trabalhos.html
+++ b/trabalhos.html
@@ -37,6 +37,6 @@
 
 
         </div>      
-        <img src="cruzamento.jpg" alt="cruzamento" class="cruzamento">
+        <img src="imagem.png" alt="imagem" class="imagem">
 </body>
 </html>
