--- a/nos.html
+++ b/nos.html
@@ -40,7 +40,7 @@
                 <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="leo.png" alt="foto da Bella">
+                <img class="estudante-imagem" src="lulaviado.jpeg" alt="foto da Bella">
                 <h3 class="estudante-nome">Leonardo</h3>
                 <a href="https://github.com/TROXAAA"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                 <a href="https://www.instagram.com/xzx_l.e.o_xzx/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
@@ -63,7 +63,7 @@
                 <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="ana.png" alt="foto da Bella">
+                <img class="estudante-imagem" src="bolsomito.jpeg" alt="foto da Bella">
                 <h3 class="estudante-nome">Ana Luiza</h3>
                 <a href="https://github.com/annalumiau"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                 <a href="https://www.instagram.com/lopes_belh/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
