--- a/trabalhos.html
+++ b/trabalhos.html
@@ -37,6 +37,17 @@
 
 
         </div>      
-        <img src="imagem.png" alt="imagem" class="imagem">
+        <li class="fotosprojetos">
+            <img src="imagem.png" alt="imagem" class="imagem">
+            <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
+
+
+
+
+        </li>
+        
+
+
+
 </body>
 </html>
