--- a/nos.html
+++ b/nos.html
@@ -56,7 +56,7 @@
                 <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="gab.png" alt="foto da Bella">
+                <img class="estudante-imagem" src="faz o l.jpeg" alt="foto da Bella">
                 <h3 class="estudante-nome">Gabriel</h3>
                 <a href="https://github.com/alves09"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                 <a href="https://www.instagram.com/gabriel_costa_05/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
@@ -65,6 +65,16 @@
             <div class="estudante-div">
                 <img class="estudante-imagem" src="bolsomito.jpeg" alt="foto da Bella">
                 <h3 class="estudante-nome">Ana Luiza</h3>
+                <a href="https://github.com/annalumiau"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
+                <a href="https://www.instagram.com/lopes_belh/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="bolso.jpeg" alt="foto da Bella">
+                <h3 class="estudante-nome">Maria Clara</h3>
                 <a href="https://github.com/annalumiau"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                 <a href="https://www.instagram.com/lopes_belh/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
                 <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
