--- a/index.html
+++ b/index.html
@@ -3,46 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=100%, initial-scale=1.0">
     <link rel="Website icon" type="png"
           href="logo2.png">
     <title>Robótica</title>
 
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="abas2-style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet"> 
 
 </head>
-
 <body>
-   <header>
-        <!-- <div class="caixa">
-            <p>robotics at school</p> -->
-        </div>
-   </header>
-   <main>
-       <section >
-        <p class="nosso-nome"> D-Boots</p> 
-            <!-- <p class="home">Home</p> -->
-        <div class="entrada" >
-            <a href="abas.html">
-            <img src="logo.png" class="logo"></a>
-            <img src="robo4.png" class="img-robo"> 
-                <li><a href="sobre.html" class="sobre1">01</a></li>
-                <li><a href="trabalhos.html" class="trabalhos2">02</a></li>
-                <li><a href="loc.html" class="loc3">03</a></li> 
-                <p class="sobre">S O B R E</p>     
-                <p class="trabalhos">T R A B A L H O S</p>   
-                <p class="loc">L O C A L I Z A Ç Ã O</p> 
-           <!-- <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis. A D-BOOTS foi criada em 2008 com o intuito de incentivar o desenvolvimento tecnologico, fabricando e fornecendo peças para automação e robótica de alta qualidade a preços acessíveis</p> -->
-        </div>
-    </section>
-   </main>
+    
+    <figure class="container-img">
+    <img class="center" src="robo4.png">
+    </figure>
 
-   <iframe src="https://sprig.figma.com" aria-hidden="true" tabindex="-1" height="0" width="0" style="position: fixed; bottom: 0px; right: 0px; z-index: 2147483647;">
-</iframe>
+    <div class="container">
+        <img src="logo.png" class="elemento">
+        </div>
+    </div> 
 
+    <p class="nosso-nome"> D-Boots</p>
+
+    <nav class="menu-lateral">
+        <ul>
+            <li class="item-menu ativo">
+                <a href="index.html">
+                    <span class="icon"><i class="bi bi-house"></i></span>
+                    <span class="txt-link">Home</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="trabalhos.htm">
+                    <span class="icon"><i class="bi bi-image"></i></span>
+                    <span class="txt-link">Trabalhos</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="sobre.html">
+                    <span class="icon"><i class="bi bi-columns-gap"></i></span>
+                    <span class="txt-link">Sobre</span>
+                </a>
+            </li>
+            <li class="item-menu">
+            <a href="loc.html">
+                <span class="icon"><i class="bi bi-geo-alt"></i></span>
+                <span class="txt-link">Localização</span>
+            </a>
+            <li class="item-menu">
+                <a href="nos.html">
+                    <span class="icon"><i class="bi bi-people-fill"></i></span>
+                    <span class="txt-link">Nós</span>
+                </a>
+            </li>
+        </ul>
+    
+       </nav> 
+
+    <script src="menu.js"></script>
 </body>
 </html>
