--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Robótica</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="abas2-style.css">
+    <link rel="stylesheet" href="abas-style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet"> 
 
