--- a/loc.html
+++ b/loc.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Website icon" type="png"
+          href="logo2.png">
     <title>Localização</title>
+
     <link rel="stylesheet" href="loc-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
 
