--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </a>
             </li>
             <li class="item-menu">
-                <a href="trabalhos.htm">
+                <a href="trabalhos.html">
                     <span class="icon"><i class="bi bi-image"></i></span>
                     <span class="txt-link">Trabalhos</span>
                 </a>
