--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
     </div> 
 
-    <p class="nosso-nome"> D-Boots</p>
+    <!-- <p class="nosso-nome"> D-Boots</p> -->
 
     <nav class="menu-lateral">
         <ul>
-            <li class="item-menu ativo">
+            <li class="item-menu">
                 <a href="index.html">
-                    <span class="icon"><i class="bi bi-house"></i></span>
+                    <span class="icon"><i class="bi bi-list"></i></span>
                     <span class="txt-link">Home</span>
                 </a>
             </li>
