--- a/loc.html
+++ b/loc.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-     <p class="nosso-nome"> D-Boots</p> 
+     <!-- <p class="nosso-nome"> D-Boots</p>  -->
 
     <div class="container">
         <img src="logo.png" class="elemento">
@@ -36,7 +36,7 @@
 
     <nav class="menu-lateral">
         <ul>
-            <li class="item-menu ativo">
+            <li class="item-menu">
                 <a href="index.html">
                     <span class="icon"><i class="bi bi-house"></i></span>
                     <span class="txt-link">Home</span>
@@ -54,7 +54,7 @@
                     <span class="txt-link">Sobre</span>
                 </a>
             </li>
-            <li class="item-menu">
+            <li class="item-menu ativo">
             <a href="loc.html">
                 <span class="icon"><i class="bi bi-geo-alt"></i></span>
                 <span class="txt-link">Localização</span>
