--- a/trabalhos.html
+++ b/trabalhos.html
@@ -43,6 +43,7 @@
             <img src="imagem.png" alt="imagem" class="imagem">
             <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
             <img src="fototrabalho.jpg" alt="fototrabalho" class="fototrabalho">
+            <img src="fototra.jpg" alt="fototra" class="fototra">
             
 
 
